# Margadarshak

./: README.md
Backend/Margadarshak/: cgpa_test.py  db.sqlite3  manage.py  requirements.txt
Backend/Margadarshak/Margadarshak/: asgi.py  settings.py  urls.py  wsgi.py
Backend/Margadarshak/media/models/: mlr_model.pkl  mlr_model_updated.pkl
Backend/Margadarshak/ml_api/: admin.py  models.py  serializers.py  test_api.py  urls.py  views.py
DATA/Real_Data_EDA/code/: EDA.py
DATA/Synthetic data eda/CSV file/: My attributes.ipynb
FastApi/: main.py  model.pkl  pyproject.toml  render.yaml  train_and_save_model.py
Frontend/: README.md  index.html  package.json  tailwind.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/: Auth.tsx  Footer.tsx  GoogleLogin.tsx  LoginModal.tsx  Navigation.tsx  ScrollToTop.tsx
Frontend/src/components/ui/: skeleton.tsx  (+1 more)
Frontend/src/contexts/: AuthContext.tsx
Frontend/src/hooks/: useFormBuffer.tsx  useUserData.tsx
Frontend/src/pages/: About.tsx  Calculator.tsx  Contact.tsx  Dashboard.tsx  HowItWorks.tsx  Index.tsx  Login.tsx  Results.tsx
Frontend/supabase/: config.toml
Frontend/supabase/migrations/: 20250630073954-35502d25-e3a8-4ea7-9bb3-de31491b3a42.sql  20250703100818-231564c4-77de-469c-b201-62f482aec87f.sql  20250704025343-8856d3a0-7d10-4526-a3f2-3c90adf7a5c3.sql  20250704025829-1180bc3f-4484-4138-b25a-5486db92633e.sql
Margadarshak/: SyntheticData.py
Synthetic data eda/CSV file/: synthetic_student_survey_data.csv  synthetic_student_survey_data.numbers
Synthetic data eda/Code/: eda.py  synthetic.py
(+3 files in other folders)
