[tool.poetry]
name = "fastapi-margadarshak"
version = "0.1.0"
description = "FastAPI backend for Margadarshak"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.30.0"
scikit-learn = "^1.4.1"
pandas = "^2.2.0"
joblib = "^1.3.2"
cloudpickle = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
